--- a/README
+++ b/README
@@ -1,4 +1,77 @@
-Hoshizora Intergalactic SpaceWays - 
-Travel Agency for Your Exclusive and Seamless Travel Experiences Beyond Earth, 
-Providing Unmatched Luxury, Safety, and Expertise in the New Frontier of Space 
-Exploration.
+# Hoshizora Intergalactic SpaceWays
+
+Travel Agency for Your Exclusive and Seamless Travel Experiences Beyond Earth
+
+"Providing Unmatched Luxury, Safety, and Expertise in the New Frontier of Space Exploration."
+
+## ABOUT
+
+Hoshizora Intergalactic SpaceWays is a futuristic space travel agency that delivers a luxurious and seamless travel
+experience across the galaxy. From orbital getaways to planetary vacations, our platform allows guests to explore
+beyond Earth with ease and confidence.
+
+We utilize RFID and NFC technology to provide smart card access for travelers — enabling secure, efficient, and
+personalized boarding and disembarkation across multiple interstellar destinations.
+
+## REQUIREMENTS
+
+To run this project locally, ensure you have the following installed:
+
+- Node.js (v14 or higher)
+- npm or yarn
+- A modern browser (for testing)
+- Web server (e.g., Express.js for backend)
+- RFID/NFC Reader compatible with your kiosk setup
+- Any Database Access (This is built with Firebase)
+
+## INSTALLATION
+
+1. Clone the Repository:
+   git clone https://github.com/JohnIvn/tapigo.git
+   cd tapigo
+
+2. Install Dependencies:
+   npm install
+   OR
+   yarn install
+
+3. Configure Environment:
+   Create a .env file in the root directory and add your configuration:
+
+4. Run the Development Server:
+
+   4a. Backend
+   npm run backend
+   OR
+   yarn backend
+
+   4b. Frontend
+   npm run frontend
+   OR
+   yarn frontend
+
+   4c. Hardware
+   npm run hardware
+   OR
+   yarn hardware
+
+5. Access the Application (Locally):
+   Open your browser and go to:
+   http://localhost:3000
+
+## FEATURES
+
+- Ticket purchase and management system
+- RFID/NFC tap-to-enter integration
+- Responsive UI for both web and kiosk environments
+- Admin dashboard for managing events and access control
+- Fast check-in/check-out flow
+
+## LICENSE
+
+See the LICENSE file for more information.
+
+---
+
+Thank you for choosing Hoshizora Intergalactic SpaceWays —
+Your gateway to the stars begins with a single tap.
